# monot

./: README.md  build-arduino-firmware.sh
lib/: FindMosquitto.cmake
res/: startup-raspberry.sh
src/arduino-walk/: main.c
src/monot-brain/: pom.xml
src/monot-hearing/: pom.xml
src/monot-vision/: Dockerfile  build.sh  main.c
src/monot-vision/lib/mosquitto/: libmosquitto.so.1
src/monot-vision/lib/mosquitto/cpp/: libmosquittopp.so.1
src/monot-vision/src/: .gitignore  .run.sh.swp  CMakeCache.txt  CMakeLists.txt  Controller.cpp  Controller.h  FaceDetector.cpp  FaceDetector.h  Makefile  cmake_install.cmake  main.cpp  main2.cpp  monot-vision  mqtt.c  run.sh  temperature_conversion.cpp
src/monot-vision/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  monot-vision
